--- a/source/index.html
+++ b/source/index.html
@@ -6,19 +6,21 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header container">
+    <header class="page-header">
       <div class="page-header__wrapper">
-        <a href="#" class="page-header__logo">
-          <img src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy" class="page-header__logo-image">
-          <img src="img/logo-text-mobile.svg" width="101" height="18" alt="Магазин Cat Energy" class="page-header__title-image">
-        </a>
-        <button class="menu__button" type="button" aria-controls="menu__list">
-          <span class="visually-hidden">Открыть, закрыть</span>
-          <svg class="menu__icon" aria-hidden="true" width="24" height="16">
-            <use class="menu__icon-menu" href="img/sprite.svg#menu"></use>
-            <use class="menu__icon-cross" href="img/sprite.svg#cross"></use>
-          </svg>
-        </button>
+        <div class="page-header__inner container">
+          <a href="#" class="page-header__logo">
+            <img src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy" class="page-header__logo-image">
+            <img src="img/logo-text-mobile.svg" width="101" height="18" alt="Магазин Cat Energy" class="page-header__title-image">
+          </a>
+          <button class="page-header__button" type="button" aria-controls="menu__list">
+            <span class="visually-hidden">Открыть, закрыть</span>
+            <svg class="page-header__icon" aria-hidden="true" width="24" height="16">
+              <use class="page-header__icon-menu" href="img/sprite.svg#menu"></use>
+              <use class="page-header__icon-cross" href="img/sprite.svg#cross"></use>
+            </svg>
+          </button>
+        </div>
       </div>
       <nav class="page-header__menu menu">
         <ul class="menu__list" id="menu__list">
@@ -114,7 +116,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer page-footer--index">
+    <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
         <address class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
@@ -123,11 +125,11 @@
         <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <div class="page-footer__contacts">
-        <div class="page-footer__box container">
-          <a href="#" class="page-footer__logo">
-            <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
-          </a>
-          <ul class="page-footer__contacts socials">
+        <a href="#" class="page-footer__logo">
+          <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
+        </a>
+        <div class="page-footer__element">
+          <ul class="page-footer__contacts socials container">
             <li class="socials__item">
               <a class="socials__link socials__link--vk" href="#" title="Вконтакте" target="_blank" rel="noopener noreferrer">
                 <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "В Контакте"</span>
@@ -153,13 +155,13 @@
               </a>
             </li>
           </ul>
-          <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener noreferrer">
-            <span class="page-footer__copyright-text">HTML Academy</span>
-            <svg class="page-footer__copyright-icon" aria-hidden="true" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
-            </svg>
-          </a>
         </div>
+        <a class="page-footer__copyright container" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener noreferrer">
+          <span class="page-footer__copyright-text">HTML Academy</span>
+          <svg class="page-footer__copyright-icon" aria-hidden="true" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+          </svg>
+        </a>
       </div>
     </footer>
   </body>
