--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru" class="page">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -106,31 +107,31 @@
             <div class="form__item checkbox">
               <label for="sugar" class="checkbox__label">
                 <input type="checkbox" id="sugar" class="checkbox__input visually-hidden" checked>
-                <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/></svg>
+                <svg class="checkbox__svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path class="checkbox__line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/></svg>
               Сахарозаменитель</label>
             </div>
             <div class="form__item checkbox">
               <label for="water" class="checkbox__label">
                 <input type="checkbox" id="water" class="checkbox__input visually-hidden">
-                <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+                <svg class="checkbox__svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path class="checkbox__line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
                 </svg>
               Питьевая вода</label>
             </div>
             <div class="form__item checkbox">
               <label for="milk" class="checkbox__label">
                 <input type="checkbox" id="milk" class="checkbox__input visually-hidden">
-                <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+                <svg class="checkbox__svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path class="checkbox__line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
                 </svg>
               Молоко</label>
             </div>
             <div class="form__item checkbox">
               <label for="vitamins" class="checkbox__label">
                 <input type="checkbox" id="vitamins" class="checkbox__input visually-hidden">
-                <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+                <svg class="checkbox__svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path class="checkbox__line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
                 </svg>
               Витамины</label>
             </div>
