--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
       </nav>
     </header>
     <main class="page-content">
-      <div class="container container--catalog">
+      <div class="container container--form">
         <h1 class="page-content__title page-content__title--form">Подбор программы</h1>
         <p class="page-content__description">
           Заполните анкету, и мы подберём программу питания для вашего кота
@@ -49,7 +49,7 @@
       <form class="page-content__form form" method="POST" action="https://echo.htmlacademy.ru/courses">
         <div class="form__container">
           <fieldset class="form__group form__group--pet">
-            <div class="container container--catalog container--reset-form">
+            <div class="container container--form container--reset-form">
               <legend class="visually-hidden">Данные о питомце</legend>
               <div class="form__group-item form-control">
                 <label class="form-control__label" for="name">Имя:<sup>*</sup></label>
@@ -67,7 +67,7 @@
           </fieldset>
           <fieldset class="form__group form__group--program">
             <legend class="visually-hidden">Выбор программы питания</legend>
-            <div class="container container--catalog container--reset-form">
+            <div class="container container--form container--reset-form">
               <div class="form__wrap">
                 <div class="form__element radio-button">
                   <input type="radio" id="slim" name="program-group" class="radio-button__input visually-hidden">
@@ -86,7 +86,7 @@
           </fieldset>
         </div>
         <fieldset class="form__group form__group--owner">
-          <div class="container container--catalog">
+          <div class="container container--form">
             <legend class="form__text form__text--owner">Контактные данные (владельца кота)</legend>
             <div class="form__grid">
               <div class="form__column form__column--email form-control">
@@ -101,7 +101,7 @@
           </div>
         </fieldset>
         <fieldset class="form__group form__group--comment">
-          <div class="container container--catalog">
+          <div class="container container--form">
             <legend class="form__text form__text--comment">Комментарий</legend>
             <div class="form__group-item form-control">
               <label class="visually-hidden" for="text-field">Текст комментария:</label>
@@ -110,7 +110,7 @@
           </div>
         </fieldset>
         <fieldset class="form__group form__group--supplements">
-          <div class="container container--catalog">
+          <div class="container container--form">
             <legend class="form__text form__text--supplements">Дополнительно</legend>
             <div class="form__item-box">
               <div class="form__item checkbox">
@@ -147,7 +147,7 @@
             </div>
           </div>
         </fieldset>
-        <div class="form__box-btn container container--catalog">
+        <div class="form__box-btn container container--form">
           <button class="form__btn primary-button primary-button--form-btn" type="submit">
             Отправить заявку
           </button>
@@ -156,7 +156,7 @@
       </form>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper page-footer__wrapper--form container container--catalog">
+      <div class="page-footer__wrapper page-footer__wrapper--form container container--form">
         <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
         <address class="page-footer__address">
           ул. Большая Конюшенная, д. 19/8
@@ -167,7 +167,7 @@
         <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <div class="page-footer__contacts">
-        <div class="page-footer__container container container--catalog">
+        <div class="page-footer__container">
           <a href="#" class="page-footer__logo">
             <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
           </a>
